--- a/video.html
+++ b/video.html
@@ -16,12 +16,12 @@
             <div class="pause">
                 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
             </div>
-            <video src="video/c.mp4"></video>
-        </div>
-        <div class="progress">
-            <p class="move"></p>
+            <video src="c.mp4"></video>
         </div>
         <div class="bottom">
+            <div class="progress">
+                <p class="move"></p>
+            </div>
             <div class="bottom_l">
                 <span>
                     <i id="play" class="fa fa-play" aria-hidden="true"></i>
